[tool.poetry]
name = "cipher_cw3210"
version = "0.1.0"
description = "Encryption and decryption tools"
authors = ["Chengwei Wang <cw3210@columbia.edu>"]

[tool.poetry.dependencies]
python = "3.8.6"

[tool.poetry.dev-dependencies]
Sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
